Fix slider display issue on Firefox

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -181,6 +181,7 @@ aside {
             width: 450px;
             height: 139px;
             padding: 20px;
+            flex-wrap: nowrap;
         }
 
         &.genre-wrapper {
